--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 
     
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="lib/ion-gallery/dist/ion-gallery.css" rel="stylesheet">
     <script src="lib/ion-gallery/dist/ion-gallery.min.js"></script>
     
